# ROSE-LCOM-Tools

./: CMakeLists.txt  LICENSE  Makefile  README.md  acats.sh  allTest.sh  dockerfile  header.csv  node-types.txt  osc.sh
include/: define.hpp  is-type-rose.hpp  lcom.hpp  node-print.hpp  traverse.hpp
script/: allTest.py  excludes.py  gcc_replace.sh
src/: lcom-dot.cpp  lcom-unittest.cpp  lcom.cpp
testcases/cpp-tests/aliases/: ArrayAlias.cpp  VariableAlias.cpp  VariableAlias2.cpp
testcases/cpp-tests/classes/: class_access.cpp  class_instantiation.cpp  member_initializer.cpp  member_initializer2.cpp  multiple_constructor.cpp  multiple_constructor2.cpp  nested_class.cpp  private.cpp  protected.cpp  undefined_methods.cpp  unshared_attributes.cpp
testcases/cpp-tests/classes/template_classes/: multiple_templates.cpp  template_class.cpp  template_class2.cpp  template_instantiation.cpp  template_instantiation2.cpp  template_specialization.cpp  template_template_parameter.cpp  with_namespace.cpp
testcases/cpp-tests/inheritance/: inherited_lcom.cpp  multiple_inheritance.cpp  private.cpp  protected.cpp
testcases/cpp-tests/inheritance/header_files_no_template_class/: derived.h  main.cpp
testcases/cpp-tests/inheritance/header_files_template_class/: base.h  derived.h  main.cpp
testcases/cpp-tests/namespaces/nested/: empty_outer.cpp  outer_accesses_inner.cpp
testcases/cpp-tests/namespaces/seperate_translation_unit/: namespace.cpp  namespace2.cpp
testcases/cpp-tests/namespaces/single_translation_unit/: samefile.cpp
testcases/other-tests/: array_renaming.adb  array_renaming.ads  body_attribute1.adb  body_attribute1.ads  body_attribute2.adb  body_attribute2.ads  body_attribute3.adb  body_attribute3.ads  body_attribute4.adb  body_attribute4.ads  child.adb  child.ads  complex1.adb  complex1.ads  complex2.adb  complex2.ads  complex3.adb  complex3.ads  complex_int.ads  concurrent.adb  concurrent.ads  debug.adb  debug.ads  func_renaming.adb  func_renaming.ads  func_renaming_use.adb  func_renaming_use.ads  gcomplex.adb  gcomplex.ads  internal_packages.adb  multivariables.adb  multivariables.ads  nested.adb  nested.ads  nofunc_renaming.adb  nofunc_renaming.ads  notes.txt  novar_renaming.adb  novar_renaming.ads  p.adb  (+38 more)
testcases/paper/Array alias/: Array.cpp  Array.go  Array.java  Array.py
testcases/paper/Child procedure/: Parent.cpp  Parent.go  Parent.java  Parent.py
testcases/paper/Constructors/: Constructors.cpp  Constructors.go  Constructors.java  Constructors.py
testcases/paper/Extends/: Extender.java  Extends.go  Extends.java  Extends.py
testcases/paper/FilterAttributes/: ExternalClass.java  FilterAttributes.go  FilterAttributes.java  FilterAttributes.py
testcases/paper/FilterMethodCalls/: ExternalMethodClass.java  FilterMethodCalls.go  FilterMethodCalls.java  FilterMethodCalls.py
testcases/paper/Function alias/: Function.cpp  Function.go  Function.java  Function.py
testcases/paper/Generics/: Generics.cpp  Generics.go  Generics.java
testcases/paper/Import/: Import.cpp  Import.hpp  Import.py
testcases/paper/Methods/: Methods.cpp  Methods.go  Methods.java  Methods.py  OutsideClass.java
testcases/paper/MethodsCallMethods/: MethodsCallMethods.go  MethodsCallMethods.java  MethodsCallMethods.py
testcases/paper/Nested/: Nested.adb  Nested.ads  Nested.go  Nested.java  Nested.py
testcases/paper/NestedAlias/: NestedAlias.go  NestedAlias.py
testcases/paper/NestedClasses/: NestedClasses.cpp  NestedClasses.go  NestedClasses.java  NestedClasses.py
testcases/paper/Private/: Private.cpp  Private.go  Private.java  Private.py
testcases/paper/Protected/: Protected.java
testcases/paper/Raising/: Raising.Java  Raising.cpp  Raising.go  Raising.py
testcases/paper/Static/: Static.cpp  Static.go  Static.java  Static.py
testcases/paper/Variable alias/: Variable.Java  Variable.cpp  Variable.go  Variable.py
testcases/simple-cases/: c1.adb  c1.ads  c2.adb  c2.ads  c3.adb  c3.ads  c4.adb  c4.ads  c5.adb  c5.ads  c6.adb  c6.ads  c7.adb  c7.ads  c8.adb  c8.ads  c9.adb  c9.ads
testcases/small-test/: main.adb  small.cpp  smalltest.adb  smalltest.ads
